<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".sis.ui.view.RegistrarProductoFragment"
    android:orientation="vertical"
    android:layout_margin="10sp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_field"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:src="@drawable/ic_baseline_image_24"
                android:layout_gravity="center"
                android:contentDescription="@string/todo" />
            <com.google.android.material.textfield.TextInputLayout
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/nombre_field_label"
                android:layout_marginBottom="5sp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5sp"
                android:baselineAligned="false">
                <com.google.android.material.textfield.TextInputLayout
                    app:errorEnabled="true"
                    app:helperTextEnabled="true"
                    android:hint="@string/costo_field_label"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="5sp"
                    app:startIconDrawable="@drawable/ic_baseline_attach_money_24"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/costo_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/categoria_field"
                    app:helperTextEnabled="true"
                    android:hint="@string/categoria_field_label"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_gravity="start">
                    <AutoCompleteTextView
                        android:id="@+id/categoria_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5sp"
                android:baselineAligned="false">
                <com.google.android.material.textfield.TextInputLayout
                    app:errorEnabled="true"
                    app:helperTextEnabled="true"
                    android:hint="@string/precio_menudeo_field_label"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="5sp"
                    app:startIconDrawable="@drawable/ic_baseline_attach_money_24"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/precio_menu_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    app:errorEnabled="true"
                    app:helperTextEnabled="true"
                    android:hint="@string/precio_mayoreo_field_label"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    app:startIconDrawable="@drawable/ic_baseline_attach_money_24"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/precio_mayo_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5sp"
                android:baselineAligned="false">
                <com.google.android.material.textfield.TextInputLayout
                    app:errorEnabled="true"
                    app:helperTextEnabled="true"
                    android:hint="@string/marca_field_label"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="5sp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/marca_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    app:errorEnabled="true"
                    app:helperTextEnabled="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/color_field_label"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/color_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/unidad_medida_field"
                app:helperTextEnabled="true"
                android:hint="@string/unidad_de_medida_field_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_gravity="center">
                <AutoCompleteTextView
                    android:id="@+id/unidad_medida_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10sp">
                <com.google.android.material.textfield.TextInputLayout
                    app:errorEnabled="true"
                    app:helperTextEnabled="true"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:hint="@string/cantidad_minima_field_label"
                    android:layout_marginEnd="5sp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cantidad_min_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/save_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/guardar_field_label" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>